--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@types/jquery": "^3.3.32",
     "bootstrap": "^4.4.1",
+    "json-server": "^0.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
