--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@types/jquery": "^3.3.32",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "json-server": "^0.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
