--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "json-server": "^0.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
